# certification-Dev_IA

./: .gitignore  .pre-commit-config.yaml  MangaVersion1.0 2025-12-15 16_12_43 (1).ipynb  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  ruff.toml  run_databrick_job_export.py  workflow_certification_dev_ia.drawio
01_scraping_manganews/: .gitignore  README.md  pyproject.toml  requirements.txt  scrapy.cfg
01_scraping_manganews/.github/workflows/: quality_scraping.yml
01_scraping_manganews/data/archive/2025-12-31/: MANIFEST.md
01_scraping_manganews/great_expectations_017_backup/: great_expectations.yml
01_scraping_manganews/gx/: great_expectations.yml
01_scraping_manganews/gx/expectations/: .ge_store_backend_id
01_scraping_manganews/reports/gx/: manganews_series_report.json  populaires_report.json  summary_report.json
01_scraping_manganews/scripts/: backfill_jsonl.py  gx_report_utils.py  obsolateimport_series_backfilled_to_postgres.py  obsolateload_populaires_to_postgres.py  obsolatevalidate_populaires_gx110v1.py  obsoletevalidate_manganews_series_gx110v1.py  obsoletevalidate_runtime_jsonl_gx110.py  run_all_validations_gx110.py  run_embeddings_e5_pgvector.py  run_embeddings_resume_missing.py  run_import_populaires.py  run_import_series.py  run_pipeline_backfill_then_validate.py  run_pipeline_backfill_validate_import.py  run_prod_import.py  run_scrape.py  validate_manganews_series_gx110.py  validate_populaires_gx110.py
01_scraping_manganews/src/manga_news_scraper/: extensions.py  items.py  middlewares.py  pipelines.py  settings.py
01_scraping_manganews/src/manga_news_scraper/spiders/: _access.py  manganews_populaires.py  manganews_series.py
01_scraping_manganews/src/manga_news_scraper/utils/: enrich_jsonl.py
01_scraping_manganews/src/rag/: rag_search.py
01_scraping_manganews/tests/: test_manganews_spiders.py  test_run_scrape.py
02_api_manga/: .env.example  Dockerfile  README.md  compose.integration.yml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
02_api_manga/app/: database.py  main.py  settings.py
02_api_manga/sql/: 001_api_schema.sql
02_api_manga/tests/: http_smoke.py  test_api.py  test_settings.py
02_api_manga/tests/fixtures/: 002_sample_data.sql
03_kitsu_api_exports/: .gitignore  README.md  pyproject.toml
03_kitsu_api_exports/src/api_manga/: __init__.py  cli.py  client.py  exporter.py  full_catalog.py  run_exports.py  run_full_catalog.py  run_top_rated.py  service.py  validate_fixtures.py
03_kitsu_api_exports/tests/: test_client.py  test_collection.py  test_full_catalog.py  test_reprise_ensembliste.py
04_scraping_manga_sanctuary/: .gitignore  README.md  pyproject.toml
04_scraping_manga_sanctuary/canari/: 01_echantillon.py  02_rescrape.py  03_comparer.py  04_alias_genres.py  05_ean.py  06_reviews.py  07_verifier.py  rapport.md
04_scraping_manga_sanctuary/manga_sanctuary/manga_sanctuary/: extensions.py  items.py  middlewares.py  pipelines.py  settings.py
04_scraping_manga_sanctuary/manga_sanctuary/manga_sanctuary/spiders/: _access.py  manga_sanctuary_volumes.py
04_scraping_manga_sanctuary/scripts/: run_scrape.py
04_scraping_manga_sanctuary/tests/: conftest.py  test_access_guard.py  test_run_scrape.py  test_spider_selectors.py
04_scraping_manga_sanctuary/tests/fixtures/: review_paragraphes.html  review_sauts_de_ligne.html  serie.html  tome_avec_ean.html  tome_sans_ean.html
05_nettoyage_agregation_bdd/: .env.example  .gitignore  GRILLE_ARBITRAGE_C3.md  Makefile  README.md  package-lock.json  pyproject.toml  requetes_sql_bdd_apimanga_documentees.sql  requirements-dev.txt  requirements.txt
05_nettoyage_agregation_bdd/Preparation_weekly/data/: most_popular.json  top_publishing.json  trending_weekly.json
05_nettoyage_agregation_bdd/Preparation_weekly/export/: kitsu_rag_documents.csv  kitsu_series_authors.csv  kitsu_series_core.csv  kitsu_weekly_snapshot.csv
05_nettoyage_agregation_bdd/Preparation_weekly/notebooks/: kitsu_weekly_prepare_postgres.ipynb  notebook_kitsu_weekly_clean_normalize.ipynb  notebook_kitsu_weekly_most_popular_to_postgres.ipynb
05_nettoyage_agregation_bdd/data/: sample.csv  sample.jsonl
05_nettoyage_agregation_bdd/exports/kitsu/: kitsu_top_rated_kpi.json
05_nettoyage_agregation_bdd/notebooks/: analyse_ms_reviews_step2_parquet_csv.ipynb  analyse_ms_volumes_step1_parquet_csv_jsonb_ready.ipynb  analyse_step3_aggregation_rag_modified_v2.ipynb  analyse_step4_kitsutoprated_fixed_v2.ipynb  notebook_c3_ms_kitsu_mapping_v2.ipynb  notebook_c3_ms_kitsu_mapping_v2_checked.ipynb  obsoleteanalyse_kitsutoprated.ipynb
05_nettoyage_agregation_bdd/scripts/: bootstrap.sh
05_nettoyage_agregation_bdd/src/identity/: __init__.py  acquerir_mi.py  charger_kitsu.py  charger_kitsu_staff.py  charger_mi.py  charger_ms.py  charger_wikidata.py  dates.py  ean.py  etage1_exact.py  etage2_kitsu.py  etage3_flou.py  etage_r_contrat.py  etage_r_dossiers.py  etage_r_juge.py  etage_r_juge_openai.py  etage_r_promotion.py  etage_r_run.py  hydrater_auteurs.py  mesure_349.py  pont_kitsu.py  reparse_jawiki.py  wikidata_dump.py
05_nettoyage_agregation_bdd/src/preparation_bdd/: cli.py  settings.py  textio.py
05_nettoyage_agregation_bdd/tests/: conftest.py  test_charger_kitsu_staff.py  test_charger_mi.py  test_charger_ms.py  test_charger_referentiels.py  test_dates.py  test_etage1_exact.py  test_etage2_kitsu.py  test_etage3_flou.py  test_etage_r.py  test_etage_r_openai.py  test_etage_r_promotion.py  test_etage_r_run.py  test_hydrater_auteurs.py  test_normaliser.py  test_pont_kitsu.py  test_reparse_jawiki.py
app/: __init__.py  main.py
database/: README.md  migrate.py  pyproject.toml
database/migrations/: 000_baseline.sql  001_socle_identite.sql  002_staging_referentiels.sql  003_evolution_ms.sql  004_staging_ms.sql  005_unicite_review_url.sql  006_referentiels.sql  007_referentiel_mi.sql  008_hydratation_auteurs_jawiki.sql  009_referentiel_kitsu_staff_meta.sql  010_avis_llm.sql  011_methode_human_review.sql
database/outils/: fidelite.sh
database/tests/: conftest.py  test_migrate.py
(+28 files in other folders)
