[project]
name = "api-manga-http"
version = "0.3.0"
description = "FastAPI read API for the PostgreSQL manga corpus."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6,<1",
    "psycopg[binary]>=3.2.3,<4",
    "psycopg-pool>=3.2.6,<4",
    "python-dotenv>=1.0.1,<2",
    "uvicorn[standard]>=0.32.1,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<10",
    "ruff>=0.8.4,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
