[project]
name = "scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy>=2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"
# Scaffolding Scrapy non modifié et désactivé (middlewares commentés dans settings) :
# exclu du lint car non maintenu par le projet. force-exclude pour que l'exclusion
# tienne aussi quand le fichier est passé explicitement (hook pre-commit).
force-exclude = true
extend-exclude = ["manga_sanctuary/manga_sanctuary/middlewares.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
