[project]
name = "database-migrations"
version = "0.1.0"
description = "Migrations PostgreSQL versionnées du projet certification-Dev_IA"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # psycopg 3 : cohérence avec le module 02, qui l'utilise déjà.
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
